--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,1 +1,13 @@
 README.md
+
+{{ if ne .chezmoi.os "darwin" }}
+Library
+{{ end }}
+
+{{ if ne .chezmoi.os "linux" }}
+.config/Code
+{{ end }}
+
+{{ if ne .chezmoi.os "windows" }}
+AppData
+{{ end }}
