--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,12 +2,14 @@ README.md
 .chocolatey/install-packages-windows.ps1
 
 {{ if ne .chezmoi.os "darwin" }}
+.profile
 Library
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
 .config/Code
 .config/sublime-text
+.profile
 {{ end }}
 
 {{ if ne .chezmoi.os "windows" }}
