--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,11 +2,13 @@ README.md
 .chocolatey/install-packages-windows.ps1
 
 {{ if ne .chezmoi.os "darwin" }}
+.config/alacritty
 .profile
 Library
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
+.config/alacritty
 .config/Code
 .config/sublime-text
 .profile
