--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -3,18 +3,17 @@ README.md
 .scoop/install-scoop-packages.ps1
 
 {{ if ne .chezmoi.os "darwin" }}
-.config/alacritty
-.profile
 Library
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
-.config/alacritty
 .config/Code
 .config/sublime-text
-.profile
 {{ end }}
 
 {{ if ne .chezmoi.os "windows" }}
 AppData
+{{ else }}
+.config/alacritty
+.profile
 {{ end }}
