--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,8 @@
 name: CI
 
 on:
-  # push:
-  #   branches: [ github-actions ]
+  push:
+    branches: [ github-actions ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
