--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Cache homebrew packages
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-installed-packages
+        with:
+          path: |
+            $HOME/Library/Caches/Homebrew
+            /Library/Caches/Homebrew
+          key: homebrew-${{ runner.os }}
+          restore-keys: |
+            homebrew-${{ runner.os }}
+      - name: Upgrade homebrew
+        run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
       - run: echo "work\ntest@example.org\n/tmp/keepass.kdbx" | chezmoi init --apply --depth 0 nagromc
       - run: cat ~/.profile
