--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,5 +27,5 @@ jobs:
       # - name: Upgrade homebrew
       #   run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
-      - run: echo -e "work\ntest@example.org\n/tmp/keepass.kdbx" # | chezmoi init --apply --depth 0 nagromc
+      - run: echo -e "work\ntest@example.org\n/tmp/keepass.kdbx" | chezmoi init --apply --depth 0 nagromc
       - run: cat ~/.profile
