--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
       - run: brew install chezmoi
       - run: chezmoi init --apply --depth 1 nagromc
       - run: cat $(chezmoi source-path)/.chezmoidata.yaml
-      - run: echo -e "work\nemail\nkeepass\n" > $(chezmoi source-path)/.chezmoidata.yaml
+      - run: echo -e "work\nemail\nkeepass\n" >> $(chezmoi source-path)/.chezmoidata.yaml
       - run: cat $(chezmoi source-path)/.chezmoidata.yaml
       # - run: chezmoi init --apply --depth 1 nagromc
       - run: cat ~/.profile
