--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,7 @@ jobs:
       # - name: Upgrade homebrew
       #   run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
+      - run: touch $(chezmoi source-path)/.chezmoidata.yaml
       - run: echo -e "work\nemail\nkeepass\n" >> $(chezmoi source-path)/.chezmoidata.yaml
       - run: cat $(chezmoi source-path)/.chezmoidata.yaml
       # - run: chezmoi init --apply --depth 1 nagromc
