--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
       - run: brew install chezmoi
       - run: mkdir -p $(chezmoi source-path)
       - run: touch $(chezmoi source-path)/.chezmoidata.yaml
-      - run: echo -e "work\nemail\nkeepass\n" >> $(chezmoi source-path)/.chezmoidata.yaml
+      - run: "echo -e 'data:\n  usage: work\n  keepassdbpath: keepass\n' >> $(chezmoi source-path)/.chezmoidata.yaml"
       - run: cat $(chezmoi source-path)/.chezmoidata.yaml
       # - run: chezmoi init --apply --depth 1 nagromc
       - run: cat ~/.profile
