--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
       # - name: Upgrade homebrew
       #   run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
-      - run: chezmoi init --data false --depth 1 nagromc
+      - run: chezmoi init --data=false --depth 1 nagromc
       - run: mkdir -p $(chezmoi source-path)
       - run: touch $(chezmoi source-path)/.chezmoidata.yaml
       - run: "echo -e 'data:\n  usage: work\n  email: chezmoi@example.org\n  keepassdbpath: keepass\n' >> $(chezmoi source-path)/.chezmoidata.yaml"
