--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,10 +27,9 @@ jobs:
       # - name: Upgrade homebrew
       #   run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
-      - run: chezmoi init --force --depth 1 nagromc
       - run: mkdir -p $(chezmoi source-path)
       - run: touch $(chezmoi source-path)/.chezmoidata.yaml
       - run: "echo -e 'data:\n  usage: work\n  email: chezmoi@example.org\n  keepassdbpath: keepass\n' >> $(chezmoi source-path)/.chezmoidata.yaml"
       - run: cat $(chezmoi source-path)/.chezmoidata.yaml
-      - run: chezmoi init --apply nagromc
+      - run: chezmoi init --apply --force --apply nagromc
       - run: cat ~/.profile
