--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,5 +27,5 @@ jobs:
       # - name: Upgrade homebrew
       #   run: cd "$(brew --repo)" && git fetch && git reset --hard origin/master && brew update
       - run: brew install chezmoi
-      - run: chezmoi init --apply --branch=github-actions --verbose nagromc
+      - run: chezmoi init --debug --verbose --apply --branch=github-actions nagromc
       - run: cat ~/.profile
