Use Cascadia font in VS Code & Sublime Text

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -4,13 +4,13 @@
   "editor.cursorSmoothCaretAnimation": true,
   "editor.cursorSurroundingLines": 5,
   "editor.find.autoFindInSelection": "multiline",
+  "editor.fontFamily": "'Cascadia Code', 'Consolas', monospace",
   "editor.fontSize": 12,
   "editor.formatOnPaste": true,
   "editor.renderWhitespace": "boundary",
   "files.autoSave": "onFocusChange",
   "search.smartCase": true,
-  "telemetry.enableTelemetry": false,
-  "terminal.integrated.fontFamily": "'FiraCode NF', monospace",
+  "terminal.integrated.fontFamily": "'Cascadia Code PL', 'FiraCode NF', monospace",
   "terminal.integrated.fontSize": 12,
   "workbench.colorTheme": "Monokai",
   "workbench.startupEditor": "none",
