Enable cursive ligature in VS Code & Sublime Text

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.cursorSmoothCaretAnimation": true,
   "editor.cursorSurroundingLines": 5,
   "editor.find.autoFindInSelection": "multiline",
-  "editor.fontLigatures": true,
+  "editor.fontLigatures": "'ss01'",
   "editor.fontFamily": "'Cascadia Code', 'Consolas', monospace",
   "editor.fontSize": 12,
   "editor.formatOnPaste": true,
