Add Menlo to VS Code when Cascadia is missing

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -4,8 +4,8 @@
   "editor.cursorSmoothCaretAnimation": true,
   "editor.cursorSurroundingLines": 5,
   "editor.find.autoFindInSelection": "multiline",
+  "editor.fontFamily": "Cascadia Code, Menlo, Consolas, monospace",
   "editor.fontLigatures": "'ss01'",
-  "editor.fontFamily": "'Cascadia Code', 'Consolas', monospace",
   "editor.fontSize": 12,
   "editor.formatOnPaste": true,
   "editor.renderWhitespace": "boundary",
