Remove confirmation on delete and move in VS Code

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -10,6 +10,8 @@
   "editor.formatOnPaste": true,
   "editor.renderWhitespace": "boundary",
   "editor.smoothScrolling": true,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
   "files.autoSave": "onFocusChange",
   "files.exclude": {
     "**/.classpath": true,
