--- a/.chezmoitemplates/topgrade/topgrade.toml
+++ b/.chezmoitemplates/topgrade/topgrade.toml
@@ -1,3 +1,4 @@
+[misc]
 {{ "# documentation can be found here: https://github.com/topgrade-rs/topgrade/blob/master/config.example.toml" }}
 
 {{ if eq .chezmoi.os "darwin" }}
