--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -11,6 +11,7 @@
   "editor.guides.bracketPairs": "active",
   "editor.renderWhitespace": "boundary",
   "editor.smoothScrolling": true,
+  "editor.stickyScroll.enabled": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "files.autoSave": "onFocusChange",
