Make VS Code hide unchanged lines in SCM

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "diffEditor.hideUnchangedRegions.enabled": true,
   "editor.bracketPairColorization.enabled": true,
   "editor.cursorBlinking": "smooth",
   "editor.cursorSmoothCaretAnimation": "on",
