Replace path for Sublime Text on Windows to scoop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.associations": {
+    "**/*.reg.tmpl": "reg",
     "**/.chezmoi.yaml.tmpl": "yaml",
     "**/.chezmoiignore": "plaintext",
     "**/.chezmoitemplates/sublimetext/Preferences.sublime-settings": "jsonc",
