Improve formatting in VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
   "files.associations": {
+    "**/*.ps1.tmpl": "powershell",
     "**/*.reg.tmpl": "reg",
-    "**/.chezmoi.yaml.tmpl": "yaml",
+    "**/*.sublime-settings": "jsonc",
+    "**/*.toml.tmpl": "toml",
+    "**/*.yaml.tmpl": "yaml",
     "**/.chezmoiignore": "plaintext",
-    "**/.chezmoitemplates/sublimetext/Preferences.sublime-settings": "jsonc",
-    "**/Documents/PowerShell/envvars.ps1.tmpl": "powershell",
-    "**/Documents/PowerShell/profile.ps1.tmpl": "powershell",
     "**/dot_aliases": "shellscript",
     "**/dot_bashrc": "shellscript",
     "**/dot_config/git/config.tmpl": "properties",
-    "**/dot_config/starship.toml.tmpl": "powershell",
     "**/dot_editorconfig": "editorconfig",
     "**/dot_profile.tmpl": "shellscript",
     "**/dot_zprofile": "shellscript",
