--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -5,7 +5,7 @@
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.cursorSurroundingLines": 5,
   "editor.find.autoFindInSelection": "multiline",
-  "editor.fontFamily": "Cascadia Code, Menlo, Consolas, monospace",
+  "editor.fontFamily": "CaskaydiaCove Nerd Font, Menlo, Consolas, monospace",
   "editor.fontLigatures": "'ss01'",
   "editor.fontSize": 12,
   "editor.formatOnPaste": true,
