Make VS Code fetch Git repos automatically

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -22,6 +22,7 @@
     "**/.settings": true,
     "**/.factorypath": true
   },
+  "git.autofetch": true,
   "search.smartCase": true,
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.automationProfile.windows": {
