Give focus to terminal in VS Code upon build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,9 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "presentation":{
+        "focus": true,
       }
     }
   ]
