--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -15,6 +15,7 @@ Library
 .chocolatey/
 .config/chezmoi/bin/windows/
 AppData
+Documents/autohotkey-scripts
 Documents/PowerShell
 scoop/
 {{ else }}
