--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -70,6 +70,8 @@ packages:
         - 7zip
         - beyondcompare
         - broot
+        - Cascadia-Code
+        - CascadiaCode-NF
         - chezmoi
         - curl
         - delta
