--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,7 +1,7 @@
 README.md
 
 {{ if ne .chezmoi.os "darwin" }}
-.config/chezmoi/bin/macos
+.chezmoiscripts/macos
 .strongbox
 Library
 {{ end }}
@@ -12,8 +12,8 @@ Library
 {{ end }}
 
 {{ if ne .chezmoi.os "windows" }}
+.chezmoiscripts/windows/
 .chocolatey/
-.config/chezmoi/bin/windows/
 AppData
 Documents/autohotkey-scripts
 Documents/PowerShell
