Restore old commit message length default value
Default value has been changed in v1.85.0. See https://github.com/microsoft/vscode/pull/199019

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -23,6 +23,7 @@
     "**/.factorypath": true
   },
   "git.autofetch": true,
+  "git.inputValidation": "warn",
   "search.smartCase": true,
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.automationProfile.windows": {
