Add Clink to Scoop package list

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -73,6 +73,7 @@ packages:
         - Cascadia-Code
         - CascadiaCode-NF
         - chezmoi
+        - clink
         - curl
         - delta
         - difftastic
