Add Sublime Merge Windows context menu
Was waiting ScoopInstaller/Extras#11990 to be merged.

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -109,6 +109,8 @@ packages:
           - install-context.reg
         notepadplusplus:
           - install-context.reg
+        sublime-merge:
+          - install-context.reg
         sublime-text:
           - install-context.reg
         vscode:
