Disable Scoop warning related to aria2

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "editorconfig.editorconfig",
-    "ms-vscode.powershell"
+    "golang.go",
+    "ms-vscode.powershell",
   ]
 }
