--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -68,6 +68,7 @@ packages:
     scoop:
       packages:
         - 7zip
+        - autohotkey
         - bat
         - beyondcompare
         - broot
