Change VS Code file association for `modify_*` files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,11 @@
     "**/*.sublime-settings": "jsonc",
     "**/*.toml.tmpl": "toml",
     "**/*.yaml.tmpl": "yaml",
+    "**/modify_*": "gotmpl",
     "**/.chezmoiignore": "plaintext",
     "**/dot_aliases": "shellscript",
     "**/dot_bashrc": "shellscript",
     "**/dot_config/git/config.tmpl": "properties",
-    "**/dot_config/scoop/modify_config.json": "gotmpl",
     "**/dot_editorconfig": "editorconfig",
     "**/dot_profile.tmpl": "shellscript",
     "**/dot_zprofile": "shellscript",
