Add direnv configuration

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -81,6 +81,7 @@ packages:
         - curl
         - delta
         - difftastic
+        - direnv
         - dockercompletion
         - dua
         - eartrumpet
