--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -136,6 +136,7 @@ packages:
         - topgrade
         - twinkle-tray
         - vim
+        - vlc
         - vscode
         - windows-terminal
         - xh
