Add `less` to Scoop apps

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -107,6 +107,7 @@ packages:
         - keepassxc
         - lazydocker
         - lazygit
+        - less
         - lsd
         - macchina
         - micro
