Start in Insert mode in VS Code with Vim extension

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -44,6 +44,7 @@
   "terminal.integrated.smoothScrolling": true,
   "update.enableWindowsBackgroundUpdates": false,
   "update.mode": "none",
+  "vim.startInInsertMode": true,
   "workbench.list.smoothScrolling": true,
   "workbench.startupEditor": "none",
 }
