--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -45,6 +45,7 @@
   "update.enableWindowsBackgroundUpdates": false,
   "update.mode": "none",
   "vim.startInInsertMode": true,
+  "vim.statusBarColorControl": true,
   "workbench.list.smoothScrolling": true,
   "workbench.startupEditor": "none",
 }
