Disable accessibility support in VSCode & VSCodium

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "diffEditor.hideUnchangedRegions.enabled": true,
+  "editor.accessibilitySupport": "off",
   "editor.bracketPairColorization.enabled": true,
   "editor.cursorBlinking": "smooth",
   "editor.cursorSmoothCaretAnimation": "on",
