Use system clipboard for Vim mode in VS Code

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -46,6 +46,7 @@
   "update.enableWindowsBackgroundUpdates": false,
   "update.mode": "none",
   "vim.startInInsertMode": true,
+  "vim.useSystemClipboard": true,
   "workbench.list.smoothScrolling": true,
   "workbench.startupEditor": "none",
 }
