--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "chezmoi: apply configuration",
       "type": "shell",
-      "command": "chezmoi apply",
+      "command": "chezmoi apply --refresh-externals=always",
       "group": {
         "kind": "build",
         "isDefault": true
