Disable Git autofetch with VS Code for home usage

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -23,7 +23,7 @@
     "**/.settings": true,
     "**/.factorypath": true
   },
-  "git.autofetch": true,
+  {{- if eq .usage "work" -}}"git.autofetch": true,{{- end}}
   "git.autofetchPeriod": 3600,
   "git.inputValidation": true,
   "search.smartCase": true,
