--- a/.chezmoitemplates/espanso/match/email.yml
+++ b/.chezmoitemplates/espanso/match/email.yml
@@ -9,11 +9,13 @@ global_vars:
 
 matches:
   - regex: "[cC]dl?t,"
+    label: 'Email: replace "Cordialement" abbreviation'
     replace: |-
       Cordialement,
       {{ "{{my_name}}" }}
 
   - regex: "[bB]onjour(?P<name>.*),"
+    label: "Email: template (Bonjour, Cordialement,)"
     replace: |-
       {{ "Bonjour{{name}}," }}
 
@@ -22,11 +24,10 @@ matches:
       Cordialement,
       {{ "{{my_name}}" }}
 
-  # reformat French phone number (0123456789 -> 01 23 45 67 89)
   - regex: "0(?P<gp1>\\d)(?P<gp2>\\d{2})(?P<gp3>\\d{2})(?P<gp4>\\d{2})(?P<gp5>\\d{2})"
+    label: "Email: reformat French phone number (0123456789 -> 01 23 45 67 89)"
     replace: "{{ "0{{gp1}} {{gp2}} {{gp3}} {{gp4}} {{gp5}}" }}"
 
-  # reformat French phone number in international format (+33123456789 -> +33 1 23 45 67 89)
   - regex: "\\+33(?P<gp1>\\d)(?P<gp2>\\d{2})(?P<gp3>\\d{2})(?P<gp4>\\d{2})(?P<gp5>\\d{2})"
+    label: "Email: reformat French phone number in international format (+33123456789 -> +33 1 23 45 67 89)"
     replace: "{{ "+33 {{gp1}} {{gp2}} {{gp3}} {{gp4}} {{gp5}}" }}"
-    
