Add kanata to Scoop

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -113,6 +113,7 @@ packages:
         - hyperfine
         - jq
         - just
+        - kanata
         - keepassxc
         - lazydocker
         - lazygit
