Hide Sign in button in Zed

--- a/.chezmoitemplates/zed/settings.json
+++ b/.chezmoitemplates/zed/settings.json
@@ -20,5 +20,8 @@
     "light": "One Light",
     "dark": "One Dark"
   },
+  "title_bar": {
+    "show_sign_in": false
+  },
   "ui_font_size": 16
 }
